@@ -34,8 +34,11 @@ comment <- function(x).Internal(comment(x))
 
 round <- function(x, digits = 0).Internal(round(x,digits))
 signif <- function(x, digits = 6).Internal(signif(x,digits))
-logb <- log <- function(x, base=exp(1))
+log <- function(x, base=exp(1))
     if(missing(base)).Internal(log(x)) else .Internal(log(x,base))
+logb <- function(x, base=exp(1))
+    if(missing(base)) log(x) else log(x,base)
+
 log1p <- function(x).Internal(log1p(x))
 expm1 <- function(x).Internal(expm1(x))
 
