@@ -22,6 +22,9 @@ BUG FIXES
     o   Using formals<- on a function whose body was NULL worked
 	incorrectly.  (PR#9758)
 
+    o   logb() is now strictly a wrapper for log(), so if S4 methods
+	are set on log(), logb() will also dispatch on them.
+
 
 
 		CHANGES IN R VERSION 2.5.1
